Add vulnerability-detector to test of check_configuration

--- a/integration_tests/validator/manager/ossec.conf
+++ b/integration_tests/validator/manager/ossec.conf
@@ -1432,4 +1432,57 @@
         <processes>yes</processes>
     </wodle>
 
+    <vulnerability-detector>
+        <enabled>no</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="canonical">
+            <enabled>no</enabled>
+            <os>precise</os>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>val>
+        </provider>
+    </vulnerability-detector>
+
+    <vulnerability-detector>
+        <enabled>no</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="canonical">
+            <enabled>no</enabled>
+            <os>precise</os>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>val>
+            <os>precise</os>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>val>
+        </provider>
+        <enabled>no</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="canonical">
+            <enabled>no</enabled>
+            <os>precise</os>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>val>
+            <os>precise</os>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>val>
+        </provider>
+    </vulnerability-detector>
+
+
 </ossec_config>
