--- a/integration_tests/validator/manager/Wmodules/wmodules-ossec.conf
+++ b/integration_tests/validator/manager/Wmodules/wmodules-ossec.conf
@@ -415,4 +415,46 @@
         <processes>yes</processes>
     </wodle>
 
+    <wodle name="vulnerability-detector">
+        <enabled>yes</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="ubuntu-18">
+            <disabled>yes</disabled>
+            <update_interval>1h</update_interval>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>
+        </provider>
+    </wodle>
+
+    <wodle name="vulnerability-detector">
+        <enabled>yes</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="ubuntu-18">
+            <disabled>yes</disabled>
+            <update_interval>1h</update_interval>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>
+        </provider>
+        <enabled>yes</enabled>
+        <interval>5m</interval>
+        <ignore_time>6h</ignore_time>
+        <run_on_start>yes</run_on_start>
+        <provider name="ubuntu-18">
+            <disabled>yes</disabled>
+            <update_interval>1h</update_interval>
+            <url> </url>
+            <path> </path>
+            <allow> </allow>
+            <update_from_year> </update_from_year>
+        </provider>
+    </wodle>
+
 </ossec_config>
